<resources>
    <string name="app_name">Calcul8</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="decimal">.</string>
    <string name="sign_plus">+</string>
    <string name="sign_minus">-</string>
    <string name="sign_division">÷</string>
    <string name="sign_multiplication">×</string>
    <string name="sign_plus_minus">±</string>
    <string name="sign_equality">=</string>

    <string name="result">Doing the Math:</string>
    <string name="left_parenthesis">(</string>
    <string name="right_parenthesis">)</string>
    <string name="del">Del</string>

    <string name="todo">TODO</string>
    <string name="welcome_text_splash_activity">Welcome to Calcul8 App</string>

    <string-array name="types">Num type:
        <item>Byter</item>
        <item>Shorter</item>
        <item>Inter</item>
        <item>Longer</item>
        <item>Floater</item>
        <item>Doubler</item>
    </string-array>
</resources>