<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layer1"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_weight="3"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="fill"
            android:textColor="@android:color/darker_gray"
            android:textSize="56sp"
            tools:text="24 + 0.4" />

        <TextView
            android:id="@+id/tv_res"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textDirection="rtl"
            android:textSize="28sp"
            tools:text="24.4" />

        <Spinner
            android:id="@+id/types_spin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/calc_pad"
        style="?android:attr/buttonBarStyle"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_weight="9"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_one"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="touched"
                android:text="@string/number_one" />

            <Button
                android:id="@+id/bt_two"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="touched"
                android:text="@string/number_two" />

            <Button
                android:id="@+id/bt_three"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="touched"
                android:text="@string/number_three" />

            <Button
                android:id="@+id/bt_del"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:longClickable="true"
                android:text="@string/del" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_four"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="touched"
                android:text="@string/number_four" />

            <Button
                android:id="@+id/bt_five"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="touched"
                android:text="@string/number_five" />

            <Button
                android:id="@+id/bt_six"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="touched"
                android:text="@string/number_six" />

            <Button
                android:id="@+id/bt_lePar"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/left_parenthesis" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_seven"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="touched"
                android:text="@string/number_seven" />

            <Button
                android:id="@+id/bt_eight"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="touched"
                android:text="@string/number_eight" />

            <Button
                android:id="@+id/bt_nine"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="touched"
                android:text="@string/number_nine" />

            <Button
                android:id="@+id/bt_rePar"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/right_parenthesis" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_zero"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="touched"
                android:text="@string/number_zero" />

            <Button
                android:id="@+id/bt_deci"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="touched"
                android:text="@string/decimal" />

            <Button
                android:id="@+id/bt_plusMinus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="touched"
                android:text="@string/sign_plus_minus" />

            <Button
                android:id="@+id/bt_equal"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:onClick="touched"
                android:text="@string/sign_equality" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_plus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="touched"
                android:text="@string/sign_plus" />

            <Button
                android:id="@+id/bt_minus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="touched"
                android:text="@string/sign_minus" />

            <Button
                android:id="@+id/bt_multip"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="touched"
                android:text="@string/sign_multiplication" />

            <Button
                android:id="@+id/bt_divi"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="touched"
                android:text="@string/sign_division" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>